# docurag-knowledge-base

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/test_samples/: sample.csv  sample.json  sample.md  sample.txt
docs/: project-notes.md
src/docurag/: __init__.py  cli.py  config.py  main.py
src/docurag/chat_models/: __init__.py  builder.py
src/docurag/loaders/: __init__.py  base.py  factory.py  file_loaders.py
src/docurag/processors/: __init__.py  text_splitter.py
src/docurag/qa/: __init__.py  chain.py
src/docurag/retrievers/: __init__.py  chroma_retriever.py
src/docurag/vectorstores/: __init__.py  chroma_store.py  embeddings.py
src/kb_rag/: __init__.py  main.py
src/kb_rag/loaders/: __init__.py  factory.py  file_loaders.py
tests/: __init__.py  test_builders.py  test_cli.py  test_config.py  test_loaders.py  test_qa.py  test_retriever.py  test_splitter.py
tests/manual/: __init__.py  common.py  manual_loader_test.py  manual_qa_test.py  manual_retriever_test.py  manual_splitter_test.py  manual_vector_index_test.py
